<resources>
    <string name="app_name">The Chess Learning Game</string>
    <string name="resetBtn">Reset game</string>
    <string name="white_s_turn">White\'s Turn</string>
    <string name="white_is_in_check">White is in Check!</string>
    <string name="black_is_in_check">Black is in Check!</string>
    <string name="game_over_black_wins">Game over! Black wins</string>
    <string name="game_over_white_wins">Game over! White wins</string>
    <string name="black_s_turn">Black\'s Turn</string>
    <string name="play_local">Player vs Player</string>
    <string name="play_vs_stockfish">Player vs AI</string>
    <string name="settings">Settings</string>
    <string name="fen">FEN: %s</string>
    <string name="engine_thinking">Engine is thinking…</string>
    <string name="engine_ready">Engine ready</string>
    <string name="engine_error">Engine error</string>
    <string name="voice_button">Activate Voice</string>
    <string name="select_language">Select Language</string>
    <string name="save_language">Save Language</string>
    <string name="save_settings">Save Settings</string>
    <string name="error_occurred">Error occurred, try again.</string>
    <string name="speech_recognition_unavailable">Speech recognition unavailable</string>
    <string name="invalid_move">Invalid move.</string>
    <string name="permission_denied">Permission denied - cannot use speech features</string>
    <string name="speak">Speak</string>
    <string name="difficulty">Difficulty</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="difficulty_10">Difficulty: 10</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="voiceInputOption">Method of entering voice commands</string>
    <string name="push_to_talk">Push to Talk</string>
    <string name="continuous">Continuous</string>
    <string name="none">None</string>
    <string name="help_dialog_message">
        <![CDATA[
        1. Move your pieces by tapping on them.
        2. The game highlights all possible moves.
        3. Use the hint button if you are stuck.
        4. Your clock is ticking - plan quickly!
        5. Long press on a piece for more options.
        6. You can undo your move if needed.
        7. The app saves your game automatically.
        8. Check the settings for voice input options.
        9. Customize your board in the settings.
        10. Tap on the clock to pause the game.
        11. Learn chess strategies in the tutorial.
        12. Enjoy and have fun playing!
        ]]>
    </string>
</resources>