<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voiceInputOption"
            android:layout_marginTop="48dp"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_voice_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_push_to_talk"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_to_talk" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_continuous"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/continuous"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_none"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/none"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
