<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/chessBoardLight">

    <TextView
        android:id="@+id/tvDifficultyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/tvDifficultyValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_10"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="10"
        android:valueFrom="0"
        android:valueTo="20"
        android:stepSize="1"
        app:haloColor="?attr/colorPrimary"
        app:thumbColor="?attr/colorPrimary"
        app:trackColorActive="?attr/colorPrimary"
        app:trackColorInactive="?attr/colorOnSurfaceVariant"/>

    <!-- Buttons Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.Material3.Button.TextButton.Dialog"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play"
            style="@style/Widget.Material3.Button.IconButton.Filled"/>
    </LinearLayout>

</LinearLayout>
